[0.2.16]
- schema: Reaction.range -> Reaction.quote
- resolvers: queries and mutations revision and renaming
- resolvers: delete_topic(slug) implemented

[0.2.15]
- schema: Shout.created_by removed
- schema: Shout.mainTopic removed
- services: cached elasticsearch connector
- services: auth is using user_id from authorizer
- resolvers: notify_* usage fixes
- resolvers: getAuthor now accepts slug, user_id or author_id
- resolvers: login_required usage fixes

[0.2.14]
- schema: some fixes from migrator
- schema: .days -> .time_ago
- schema: excludeLayout + layout in filters -> layouts
- services: db access simpler, no contextmanager
- services: removed Base.create() method
- services: rediscache updated
- resolvers: get_reacted_shouts_updates as followedReactions query

[0.2.13]
- services: db context manager
- services: ViewedStorage fixes
- services: views are not stored in core db anymore
- schema: snake case in model fields names
- schema: no DateTime scalar
- resolvers: get_my_feed comments filter reactions body.is_not('')
- resolvers: get_my_feed query fix
- resolvers: LoadReactionsBy.days -> LoadReactionsBy.time_ago
- resolvers: LoadShoutsBy.days -> LoadShoutsBy.time_ago

[0.2.12]
- Author.userpic -> Author.pic
- CommunityAuthor.role is string now
- Author.user is string now

[0.2.11]
- redis interface updated
- viewed interface updated
- presence interface updated
- notify on create, update, delete for reaction and shout
- notify on follow / unfollow author
- use pyproject
- devmode fixed

[0.2.10]
- community resolvers connected

[0.2.9]
- starlette is back, aiohttp removed
- aioredis replaced with aredis

[0.2.8]
- refactored


[0.2.7]
- loadFollowedReactions now with login_required
- notifier service api draft
- added shout visibility kind in schema
- community isolated from author in orm


[0.2.6]
- redis connection pool
- auth context fixes
- communities orm, resolvers, schema


[0.2.5]
- restructured
- all users have their profiles as authors in core