@@ -2,6 +2,7 @@
 - schema: Reaction.range -> Reaction.quote
 - resolvers: queries and mutations revision and renaming
 - resolvers: delete_topic(slug) implemented
+- resolvers: added get_shout_followers
 
 [0.2.15]
 - schema: Shout.created_by removed
